--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,15 @@
 
   <body>
     <% if user_signed_in? %>
+      <%= link_to "Home",root_path %>
+      <%= link_to "Users","#" %>
+      <%= link_to "Books","#" %>
       <%= link_to "ログアウト",destroy_user_session_path, method: :delete %>
     <% else %>
-      <%= link_to "新規登録",new_user_registration_path %>
-      <%= link_to "ログイン",new_user_session_path %>
+      <%= link_to "Home",root_path %>
+      <%= link_to "About",home_about_path %>
+      <%= link_to "Sign up",new_user_registration_path %>
+      <%= link_to "login",new_user_session_path %>
     <% end %>
     <%= yield %>
   </body>
