--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,10 @@
 
   <body>
     <% if user_signed_in? %>
-      <%= link_to "Home",root_path %>
-      <%= link_to "Users","#" %>
-      <%= link_to "Books","#" %>
-      <%= link_to "ログアウト",destroy_user_session_path, method: :delete %>
+      <%= link_to "Home",user_path(user.id) %>
+      <%= link_to "Users",users_path %>
+      <%= link_to "Books",bookers_path %>
+      <%= link_to "logout",destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "Home",root_path %>
       <%= link_to "About",home_about_path %>
