--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
 
   <body>
     <% if user_signed_in? %>
-      <%= link_to "Home",user_path(user.id) %>
+      <%= link_to "Home","#" %>
       <%= link_to "Users",users_path %>
-      <%= link_to "Books",bookers_path %>
+      <%= link_to "Books","#" %>
       <%= link_to "logout",destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "Home",root_path %>
