--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,9 +2,9 @@
 <%= form_for(@user) do |f| %>
 
 <p>Name</p>
-<%= f.text_field :name ,autofocus: true%>
+<%= f.text_field :name ,autofocus: true%></br>
 
-<%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+<%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %></br>
 
 <p>Introduction</p>
 <%= f.text_area :introduction, autofocus: true %>
