--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Book</h1>
-<p>詳細ページ</p>
+<h1>Book detail</h1>
+<table>
+	<tr>
+			<td></td>
+			<td><%= @book.title %></td>
+			<td><%= @book.body %></td>
+		<% if @book.user == current_user %>
+			<td><%= link_to "Edit",edit_book_path(@book.id) %></td>
+			<td><%= link_to "Destroy",book_path,method: :delete, data: {confirm: "本当に消しますか？"} %></td>
+		<% end %>
+	</tr>
+</table>
