--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,14 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h1>Welcome to Bookers!!</h1>
+<p>In Bookers,
+
+you can share and exchange your opinions , inpressions , and emotions
+
+about various books!</p>
+
+<% if user_signed_in? %>
+	<%= link_to "Log in", user_path(current_user)  %>
+	<%= link_to "Sign Up", user_path(current_user) %>
+<% else %>
+	<%= link_to "Log in", new_user_session_path  %>
+	<%= link_to "Sign Up", new_user_registration_path %>
+<% end %>
