--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,11 @@
   </head>
 
   <body>
+    <h1>Bookers</h1>
     <% if user_signed_in? %>
-      <%= link_to "Home","#" %>
+      <%= link_to "Home",user_path(current_user.id) %>
       <%= link_to "Users",users_path %>
-      <%= link_to "Books","#" %>
+      <%= link_to "Books",books_path %>
       <%= link_to "logout",destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to "Home",root_path %>
