--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<h1>User Info</h1>
+<h1>User info</h1>
 <%= attachment_image_tag @user,:profile_image,format:"jpeg",class: "image-circle pull-left profile-img",fallback:"animal-ninki-gazou9.jpg",size:"60x60"%>
 
 <p>name</p>
@@ -9,7 +9,7 @@
 
 <%= link_to "編集",edit_user_path(current_user.id)%>
 
-<h1>New Book</h1>
+<h1>New book</h1>
 <%= form_for(book) do |f| %>
 
 <h4>title</h4>
