--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
 
 <%= render "users/sidebar" , book:@book %>
 
-<h1>Users#index</h1>
+<h1>Users</h1>
 <% @users.each do |user| %>
 	<p>Image</p>
-	
+
 
 	<p>Name</p>
 	<span><%= user.name %></span>
