[Fix]トップページからの遷移

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,9 +9,9 @@
 	</tr>
 	<tr>
 		<td><%= attachment_image_tag @user, :profile_image %></td>
-		<% @post_book.each do |post_book|%>
-		<td><%= link_to post_book.name,"books/#{book.id}" %></td>
-		<td><%= post_book.body %></td>
+		<% @books.each do |book|%>
+		<td><%= link_to book.title, book_path(book.id) %></td>
+		<td><%= book.body %></td>
 		<% end%>
 	</tr>
 </table>
