--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,8 @@
+<% @book.errors.full_messages.each do |message| %>
+<div class=form-error>
+	<%= message %>
+</div>
+<% end %>
 <%= render"users/sidebar" ,book:@book %>
 
 <h1>Books</h1>
