--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:notice] %>
+	<div class= "flash">
+		<%= flash[:notice] %>
+	</div>
+<% end %>
 
 <%= render "users/sidebar" , book:@book %>
 <h1>Books</h1>
