--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,18 @@
 <h1>Editing Book</h1>
 
+<% if @book.errors.any? %>
+	<div id="error_explanation">
+		<div class="alert alert-danger">
+			<%= pluralize(@book.errors.count,"error") %> prohibited this obj from being saved:
+		</div>
+<% @book.errors.full_messages.each do |message| %>
+	<div class="form-error">
+		<%= message %>
+	</div>
+<% end %>
+<% end %>
 
-<%= form_for(@book) do |f|%>
+<%= form_for(@book) do |f| %>
 
 <p>title</p>
 <%= f.text_field :title, autofocus: true %>
