--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,16 @@
+<% if @book.errors.any? %>
+	<div>
+		<div>
+			<%= pluralize(@book.errors.count,"error") %> prohibited this obj from being saved:
+		</div>
 
+		<% @book.errors.full_messages.each do |message| %>
+		<div>
+			<%= message %>
+		</div>
+	</div>
+	<% end %>
+	<% end %>
 
 <%= render"users/sidebar" ,book:@book %>
 
