--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
       <%= link_to "Sign up",new_user_registration_path %>
       <%= link_to "login",new_user_session_path %>
     <% end %>
+
+    <% render "layouts/flash" %>
+
     <%= yield %>
   </body>
 </html>
