--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,18 @@
 <h1>User info</h1>
 
+<% if @user.errors.any? %>
+	<div id="error_explanation">
+		<div class="alert alert-danger">
+			<%= pluralize(@user.errors.count,"error") %> prohibited this obj from being saved:
+		</div>
+<% @user.errors.full_messages.each do |message| %>
+	<div class="form-error">
+		<%= message %>
+	</div>
+<% end %>
+<% end %>
+
+
 <%= form_for(@user) do |f| %>
 
 <p>Name</p>
