[Add]画像からのリンク

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,7 +23,16 @@
 	</tr>
 	<tr>
 		<% @books.each do |book| %>
-			<td><%= book.title %></td>
+			<td>
+				<%= link_to user_path(book.user_id) do%>
+					<%= attachment_image_tag book.user, :profile_image, size: "60x60" %>
+				<% end %>
+			</td>
+			<td>
+				<%= link_to book_path(book.id) do %>
+					<%= book.title %>
+				<% end %>
+			</td>
 			<td><%= book.body%></td>
 		<% end %>
 	</tr>
