--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <h1>User info</h1>
-<%= attachment_image_tag @user,:profile_image,format:"jpeg",class: "image-circle pull-left profile-img",fallback:"animal-ninki-gazou9.jpg",size:"60x60"%>
+<%= attachment_image_tag @user,:profile_image,format:"jpeg",class: "image-circle pull-left profile-img",fallback:"HpGJ--S9_400x400.jpg",size:"60x60"%>
 
 <p>name</p>
 <%= current_user.name%>
