--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,7 +25,7 @@
 		<% @books.each do |book| %>
 			<td>
 				<%= link_to user_path(book.user_id) do%>
-					<%= attachment_image_tag book.user, :profile_image, size: "60x60" %>
+					<%= attachment_image_tag book.user, :profile_image, size: "60x60",fallback:"HpGJ--S9_400x400.jpg" %>
 				<% end %>
 			</td>
 			<td>
