--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,8 +7,15 @@
 <h1>Book detail</h1>
 <table>
 	<tr>
-			<td><%= attachment_image_tag @book.user, :profile_image, size: "60x60" %></td>
-			<td><%= @book.title %></td>
+			<td>
+				<%= link_to user_path(@book.user.id) do %>
+					<%= attachment_image_tag @book.user, :profile_image, size: "60x60" %>
+					<%= @book.user.name %>
+				<% end %>
+			</td>
+
+			
+			<td><%= link_to @book.title,book_path(@book) %></td>
 			<td><%= @book.body %></td>
 		<% if @book.user == current_user %>
 			<td><%= link_to "Edit",edit_book_path(@book.id) %></td>
