--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,21 +10,32 @@
   </head>
 
   <body>
-    <h1>Bookers</h1>
-    <% if user_signed_in? %>
-      <%= link_to "Home",user_path(current_user.id) %>
-      <%= link_to "Users",users_path %>
-      <%= link_to "Books",books_path %>
-      <%= link_to "logout",destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "Home",root_path %>
-      <%= link_to "About",home_about_path %>
-      <%= link_to "Sign up",new_user_registration_path %>
-      <%= link_to "login",new_user_session_path %>
-    <% end %>
-
-    <% render "layouts/flash" %>
-
+    <header class="navbar navbar-inverse">
+      <div class="container">
+        <nav class="nav navbar-nav navbar-left">
+          <span>Bookers</span>
+        </nav>
+        <nav>
+          <% if user_signed_in? %>
+            <ul class="nav navbar-nav navbar-left">
+              <li><%= link_to "Home",user_path(current_user.id) %></li>
+              <li><%= link_to "Users",users_path %></li>
+              <li><%= link_to "Books",books_path %></li>
+              <li><%= link_to "logout",destroy_user_session_path, method: :delete %></li>
+            </ul>
+          <% else %>
+            <ul class="nav navbar-nav navbar-left">
+              <li><%= link_to "Home",root_path %></li>
+              <li><%= link_to "About",home_about_path %></li>
+              <li><%= link_to "Sign up",new_user_registration_path %></li>
+              <li><%= link_to "login",new_user_session_path %></li>
+            </ul>
+          
+          <% end %>
+          </nav>
+      </div>
+    </header>
+      <% render "layouts/flash" %>
     <%= yield %>
   </body>
 </html>
