--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Homes#about</h1>
-<p>Find me in app/views/homes/about.html.erb</p>
+<div class="about-message col-md-6 col-md-offset-1">
+<h1>Welcome to <span class="glyphicon glyphicon-book"></span>Bookers!</h1>
+
