--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,24 +13,24 @@
     <header class="navbar navbar-inverse">
       <div class="container">
         <nav class="nav navbar-nav navbar-left">
-          <span>Bookers</span>
+          <span class="main-title">Bookers</span>
         </nav>
         <nav>
+          <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
-            <ul class="nav navbar-nav navbar-left">
-              <li><%= link_to "Home",user_path(current_user.id) %></li>
-              <li><%= link_to "Users",users_path %></li>
-              <li><%= link_to "Books",books_path %></li>
-              <li><%= link_to "logout",destroy_user_session_path, method: :delete %></li>
-            </ul>
+              <li><%= link_to "Home",user_path(current_user.id), class: "glyphicon glyphicon-home" %></li>
+              <li><%= link_to "Users",users_path, class: "glyphicon glyphicon-user" %></li>
+              <li><%= link_to "Books",books_path, class: "glyphicon glyphicon-book"%></li>
+              <li><%= link_to "logout",destroy_user_session_path, method: :delete, class: "glyphicon glyphicon-log-out"%></li>
+            
           <% else %>
-            <ul class="nav navbar-nav navbar-left">
-              <li><%= link_to "Home",root_path %></li>
-              <li><%= link_to "About",home_about_path %></li>
-              <li><%= link_to "Sign up",new_user_registration_path %></li>
-              <li><%= link_to "login",new_user_session_path %></li>
+          
+              <li><%= link_to "Home",root_path, class: "glyphicon glyphicon-home"%></li>
+              <li><%= link_to "About",home_about_path, class: "glyphicon glyphicon-link" %></li>
+              <li><%= link_to "Sign up",new_user_registration_path, class: "glyphicon glyphicon-edit" %></li>
+              <li><%= link_to "login",new_user_session_path, class: "glyphicon glyphicon-log-in" %></li>
+              <% end %>
             </ul>
-          <% end %>
           </nav>
       </div>
     </header>
