--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,10 @@
-<div class="col-md-2 col-md-offset-1">
+<div class="col-lg-offset-1">
   <h2>Sign up</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="text-danger">
+      <%= render "devise/shared/error_messages", resource: resource %>
+    </div>
 
     <div class="field">
       <%= f.label :name%><br />
