--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header class="navbar navbar-inverse">
       <div class="container">
         <nav class="nav navbar-nav navbar-left">
-          <span class="main-title">Bookers</span>
+          <span class="navbar-brand">Bookers</span>
         </nav>
         <nav>
           <ul class="nav navbar-nav navbar-right">
@@ -28,7 +28,7 @@
               <li><%= link_to "Home",root_path, class: "glyphicon glyphicon-home"%></li>
               <li><%= link_to "About",home_about_path, class: "glyphicon glyphicon-link" %></li>
               <li><%= link_to "Sign up",new_user_registration_path, class: "glyphicon glyphicon-edit" %></li>
-              <li><%= link_to "login",new_user_session_path, class: "glyphicon glyphicon-log-in" %></li>
+              <li><%= link_to " login",new_user_session_path, class: "glyphicon glyphicon-log-in" %></li>
               <% end %>
             </ul>
           </nav>
