--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -1,23 +1,31 @@
 <h1>User info</h1>
 <%= attachment_image_tag @user,:profile_image,format:"jpeg",class: "image-circle pull-left profile-img",fallback:"HpGJ--S9_400x400.jpg",size:"60x60"%>
 
-<p>name</p>
-<%= current_user.name%>
-
-<p>introduction</p>
-<%= current_user.introduction %>
-
-<%= link_to "編集",edit_user_path(current_user.id)%>
-
+<table class="table">
+	<tbody>
+		<tr>
+			<th>name</th>
+			<th><%= current_user.name%></th>
+		</tr>
+		<tr>
+			<th>introduction</th>
+			<th><%= current_user.introduction %></th>
+		</tr>
+	</tbody>
+</table>
+	<%= link_to "編集",edit_user_path(current_user.id), class: "btn btn-default btn-block glyphicon glyphicon-wrench"%>
 <h1>New book</h1>
 <%= form_for(book) do |f| %>
 
-<h4>title</h4>
-<%= f.text_field :title %>
+	<div class="form-group">
+		<label>title</label>
+		<%= f.text_field :title ,class: "form-control" %>
+	</div>
 
-<h4>opinion</h4>
-<%= f.text_area :body %>
-
-<%= f.submit "Create Book" %>
+	<div class="form-group">
+		<label>opinion</label>
+		<%= f.text_area :body ,class: "form-control" %>
+	</div>
+	<%= f.submit "Create Book" ,class: "btn btn-info btn-block" %>
 
 <% end %>
