--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,41 @@
 <% if flash[:notice] %>
 	<div class= "flash">
-		<%= flash[:notice] %>
+		<div class="col-md-offset-1 text-success">
+			<%= flash[:notice] %>
+		</div>
 	</div>
 <% end %>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-3">
+			<%= render "users/sidebar" , book:@book %>
+		</div>
 
-<%= render "users/sidebar" , book:@book %>
-<h1>Books</h1>
-<table>
-	<tbody>
-	<tr>
-		<th></th>
-		<th>Title</th>
-		<th>Opinion</th>
-	</tr>
-	<tr>
-		<% @books.each do |book| %>
-		<td>
-			<%= link_to user_path(@user) do %>
-				<%= attachment_image_tag book.user, :profile_image , size: "60x60" %>
-			<% end %>
-		</td>
-		<td>
-			<%= link_to book_path(book.id) do %>
-				<%= book.title %>
-			<% end %>
-		</td>
-		<td><%= book.body %></td>
-		<% end%>
-	</tr>
-	</tbody>
-</table>
+		<div class="col-xs-9">
+			<h1>Books</h1>
+			<table class="table table-hover table-inverse">
+				<thead>
+					<tr>
+						<th></th>
+						<th>Title</th>
+						<th>Opinion</th>
+					</tr>
+				</thead>
+				<tbody>
+				
+					<% @books.each do |book| %>
+						<tr>
+							<td>
+								<%= link_to user_path(@user) do %>
+									<%= attachment_image_tag book.user, :profile_image , size: "60x60" %>
+								<% end %>
+							</td>
+							<td><%=link_to book.title,book_path(book.id) %></td>
+							<td><%= book.body %></td>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
