--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,29 +11,36 @@
 	</div>
 	<% end %>
 	<% end %>
+<div class="container">
+	<div class="row">
+		<div class= "col-md-3 col-md-offeset-1">
+			<%= render"users/sidebar" ,book:@book %>
+		</div>
 
-<%= render"users/sidebar" ,book:@book %>
-
-<h1>Books</h1>
-<table>
-	<tr>
-		<th></th>
-		<th>Title</th>
-		<th>Opinion</th>
-	</tr>
-	<tr>
-		<% @books.each do |book| %>
-			<td>
-				<%= link_to user_path(book.user_id) do%>
-					<%= attachment_image_tag book.user, :profile_image, size: "60x60",fallback:"HpGJ--S9_400x400.jpg" %>
-				<% end %>
-			</td>
-			<td>
-				<%= link_to book_path(book.id) do %>
-					<%= book.title %>
-				<% end %>
-			</td>
-			<td><%= book.body%></td>
-		<% end %>
-	</tr>
-</table>
+		<div class="col-md-8">
+			<h1>Books</h1>
+			<table class="table table-inverse">
+				<thead>
+					<tr>
+						<th></th>
+						<th>Title</th>
+						<th>Opinion</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<% @books.each do |book| %>
+							<td>
+								<%= link_to user_path(book.user_id) do%>
+									<%= attachment_image_tag book.user, :profile_image, size: "60x60",fallback:"HpGJ--S9_400x400.jpg" %>
+								<% end %>
+							</td>
+							<td><%= link_to book.title,book_path(book.id) %></td>
+							<td><%= book.body%></td>
+						<% end %>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
