--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,22 +4,27 @@
 	</div>
 <% end %>
 
-<h1>Book detail</h1>
-<table>
-	<tr>
-			<td>
-				<%= link_to user_path(@book.user.id) do %>
-					<%= attachment_image_tag @book.user, :profile_image, size: "60x60" %>
-					<%= @book.user.name %>
-				<% end %>
-			</td>
+<div class="col-xs-3">
+	<%= render "users/sidebar" ,book:@new %>
+</div>
 
-			
-			<td><%= link_to @book.title,book_path(@book) %></td>
-			<td><%= @book.body %></td>
-		<% if @book.user == current_user %>
-			<td><%= link_to "Edit",edit_book_path(@book.id) %></td>
-			<td><%= link_to "Destroy",book_path,method: :delete, data: {confirm: "本当に消しますか？"} %></td>
-		<% end %>
-	</tr>
-</table>
+<div class="col-xs-7">
+	<h1>Book detail</h1>
+	<table class="table table-inverse">
+		<tr>
+				<td>
+					<%= link_to user_path(@book.user.id) do %>
+						<%= attachment_image_tag @book.user, :profile_image, size: "60x60",fallback: "HpGJ--S9_400x400.jpg" %>
+						<%= @book.user.name %>
+					<% end %>
+				</td>
+				<td><%= link_to @book.title,book_path(@book) %></td>
+				<td><%= @book.body %></td>
+
+			<% if @book.user == current_user %>
+				<td><%= link_to "Edit",edit_book_path(@book.id) ,class: "btn btn-success btn-sm" %></td>
+				<td><%= link_to "Destroy",book_path,method: :delete, data: {confirm: "本当に消しますか？"} ,class: "btn btn-danger btn-sm" %></td>
+			<% end %>
+		</tr>
+	</table>
+</div>
