--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -14,7 +14,7 @@
 	</tbody>
 </table>
 
-	<%= link_to "編集",edit_user_path(current_user.id), class: "btn btn-default btn-block glyphicon glyphicon-wrench"%>
+	<%= link_to "",edit_user_path(current_user.id), class: "btn btn-default btn-block glyphicon glyphicon-wrench"%>
 	
 <h1>New book</h1>
 <%= form_for(book) do |f| %>
