--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,11 +13,11 @@
 	<% end %>
 <div class="container">
 	<div class="row">
-		<div class= "col-md-3 col-md-offeset-1">
+		<div class= "col-xs-3">
 			<%= render"users/sidebar" ,book:@book %>
 		</div>
 
-		<div class="col-md-8">
+		<div class="col-xs-9">
 			<h1>Books</h1>
 			<table class="table table-inverse">
 				<thead>
