--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,36 +1,40 @@
-<div class="col-md-4 col-md-offset-4">
-	<h1>Editing Book</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<h1>Editing Book</h1>
 
-	<% if @book.errors.any? %>
-		<div id="error_explanation">
-			<div class="alert alert-danger">
-				<%= pluralize(@book.errors.count,"error") %> prohibited this obj from being saved:
+			<% if @book.errors.any? %>
+				<div id="error_explanation">
+					<div class="alert alert-danger">
+						<%= pluralize(@book.errors.count,"error") %> prohibited this obj from being saved:
+					</div>
+			<% @book.errors.full_messages.each do |message| %>
+				<div class="form-error">
+					<%= message %>
+				</div>
+			<% end %>
+			<% end %>
+
+			<%= form_for(@book) do |f| %>
+			<div class="form-group">
+				<label>title</label></br>
+				<%= f.text_field :title, autofocus: true ,class: "form-control"%>
 			</div>
-	<% @book.errors.full_messages.each do |message| %>
-		<div class="form-error">
-			<%= message %>
+
+			<div class="form-group">
+				<label>Opinion</label></br>
+				<%= f.text_area :body, autofocus: true,class: "form-control" %>
+			</div>
+
+			<div class="form-group">
+				<%= f.submit "Update Book" ,class: "btn btn-primary btn-block"%>
+			</div>
+
+			<% end %>
+
+			<%= link_to "Show",book_path(@book.id) %>
+			|
+			<%= link_to "Back",books_path %>
 		</div>
-	<% end %>
-	<% end %>
-
-	<%= form_for(@book) do |f| %>
-	<div class="form-group">
-		<label>title</label></br>
-		<%= f.text_field :title, autofocus: true %>
 	</div>
-
-	<div class="form-group">
-		<label>Opinion</label></br>
-		<%= f.text_area :body, autofocus: true %>
-	</div>
-
-	<div class="form-group">
-		<%= f.submit "Update Book" ,class: "btn btn-primary btn-block"%>
-	</div>
-
-	<% end %>
-
-	<%= link_to "Show",book_path(@book.id) %>
-	|
-	<%= link_to "Back",books_path %>
 </div>
