--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,27 +4,31 @@
 	</div>
 <% end %>
 
-<div class="col-xs-3">
-	<%= render "users/sidebar" ,book:@new %>
-</div>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-3">
+			<%= render "users/sidebar" ,book:@new %>
+		</div>
 
-<div class="col-xs-7">
-	<h1>Book detail</h1>
-	<table class="table table-inverse">
-		<tr>
-				<td>
-					<%= link_to user_path(@book.user.id) do %>
-						<%= attachment_image_tag @book.user, :profile_image, size: "60x60",fallback: "HpGJ--S9_400x400.jpg" %>
-						<%= @book.user.name %>
+		<div class="col-xs-9">
+			<h1>Book detail</h1>
+			<table class="table table-inverse">
+				<tr>
+						<td>
+							<%= link_to user_path(@book.user.id) do %>
+								<%= attachment_image_tag @book.user, :profile_image, size: "60x60",fallback: "HpGJ--S9_400x400.jpg" %>
+								<p><%= @book.user.name %></p>
+							<% end %>
+						</td>
+						<td><%= link_to @book.title,book_path(@book) %></td>
+						<td><%= @book.body %></td>
+
+					<% if @book.user == current_user %>
+						<td><%= link_to "Edit",edit_book_path(@book.id) ,class: "btn btn-success btn-sm" %></td>
+						<td><%= link_to "Destroy",book_path,method: :delete, data: {confirm: "本当に消しますか？"} ,class: "btn btn-danger btn-sm" %></td>
 					<% end %>
-				</td>
-				<td><%= link_to @book.title,book_path(@book) %></td>
-				<td><%= @book.body %></td>
-
-			<% if @book.user == current_user %>
-				<td><%= link_to "Edit",edit_book_path(@book.id) ,class: "btn btn-success btn-sm" %></td>
-				<td><%= link_to "Destroy",book_path,method: :delete, data: {confirm: "本当に消しますか？"} ,class: "btn btn-danger btn-sm" %></td>
-			<% end %>
-		</tr>
-	</table>
+				</tr>
+			</table>
+		</div>
+	</div>
 </div>
