--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,7 +27,7 @@
 						<tr>
 							<td>
 								<%= link_to user_path(@user) do %>
-									<%= attachment_image_tag book.user, :profile_image , size: "60x60" %>
+									<%= attachment_image_tag book.user, :profile_image , size: "60x60",fallback: "HpGJ--S9_400x400.jpg" %>
 								<% end %>
 							</td>
 							<td><%=link_to book.title,book_path(book.id) %></td>
