--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -30,7 +30,7 @@
 							</td>
 						<% else %>
 							<td>
-								<%= link_to book_favorites_path(@book) do %>
+								<%= link_to book_favorites_path(@book) ,method: :post do %>
 									<i class="far fa-heart"></i>いいね数
 								<% end %>
 						    </td>
