--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -37,6 +37,19 @@
 							</td>
 							<td><%= link_to book.title,book_path(book.id) %></td>
 							<td><%= book.body%></td>
+							<% if current_user.already_favorited?(book) %>
+								<td>
+									<%= link_to book_favorite_path(id: book.id, book_id: book.id), method: :delete do %>
+										<i class="fas fa-heart"></i><%= book.favorites.count %>
+									<% end %>
+								</td>
+							<% else %>
+								<td>
+									<%= link_to book_favorites_path(id: book.id, book_id: book.id) ,method: :post do %>
+										<i class="far fa-heart"></i><%= book.favorites.count %>
+									<% end %>
+							    </td>
+							<% end %>
 						</tr>
 				</tbody>
 				<% end %>
