--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,13 +25,13 @@
 						<% if current_user.already_favorited?(@book) %>
 							<td>
 								<%= link_to book_favorite_path(@book), method: :delete do %>
-									<i class="fas fa-heart"></i>いいね数
+									<i class="fas fa-heart"></i><%= @book.favorites.count %>
 								<% end %>
 							</td>
 						<% else %>
 							<td>
 								<%= link_to book_favorites_path(@book) ,method: :post do %>
-									<i class="far fa-heart"></i>いいね数
+									<i class="far fa-heart"></i><%= @book.favorites.count %>
 								<% end %>
 						    </td>
 						<% end %>
