--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -42,6 +42,24 @@
 					<% end %>
 				</tr>
 			</table>
+
+				<% @comments.each do |comment| %>
+				<div>
+					<%#= link_to user_path(comment.user) do%>
+						<%#= attachment_image_tag comment.user, :profile_image, size: "60x60",fallback:"HpGJ--S9_400x400.jpg" %>
+					<%# end %>
+					<%= comment.content %>
+					<% if current_user == comment.user %>
+						<%= link_to "Delete", book_comment_path(@book,comment), method: :delete ,class: "btn btn-danger"%>
+					<% end %>
+				</div>
+				<% end %>
+
+			<%= form_for [@book, @comment] do |f| %>
+			  <%= f.text_area :content %>
+			  <br>
+			  <%= f.submit '送信' %>
+			<% end %>
 		</div>
 	</div>
 </div>
