--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,6 +19,7 @@
 						<th></th>
 						<th>Title</th>
 						<th>Opinion</th>
+						<th>コメント</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -32,6 +33,7 @@
 							</td>
 							<td><%=link_to book.title,book_path(book.id) %></td>
 							<td><%= book.body %></td>
+							<td><%= book.comments.count %>件</td>
 						</tr>
 					<% end %>
 				</tbody>
