--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -34,6 +34,7 @@
 									<i class="far fa-heart"></i><%= @book.favorites.count %>
 								<% end %>
 						    </td>
+						    <td>コメント数: <%= @comments.count %></td>
 						<% end %>
 
 					<% if @book.user == current_user %>
@@ -45,9 +46,7 @@
 
 				<% @comments.each do |comment| %>
 				<div>
-					<%#= link_to user_path(comment.user) do%>
-						<%#= attachment_image_tag comment.user, :profile_image, size: "60x60",fallback:"HpGJ--S9_400x400.jpg" %>
-					<%# end %>
+					<%= attachment_image_tag comment.user, :profile_image, size: "60x60",fallback:"HpGJ--S9_400x400.jpg" %>
 					<%= comment.content %>
 					<% if current_user == comment.user %>
 						<%= link_to "Delete", book_comment_path(@book,comment), method: :delete ,class: "btn btn-danger"%>
@@ -56,7 +55,7 @@
 				<% end %>
 
 			<%= form_for [@book, @comment] do |f| %>
-			  <%= f.text_area :content %>
+			  <%= f.text_area :content,class: "form-control" %>
 			  <br>
 			  <%= f.submit '送信' %>
 			<% end %>
