--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,6 +18,15 @@
 									<tr>
 										<td><%= attachment_image_tag user, :profile_image, size: "60x60", fallback:"HpGJ--S9_400x400.jpg" %></td>
 										<td><%= user.name %></td>
+										<td>フォロー数 : <%= @followed.count %></td>
+										<td>フォロワー数 : <%= @follower.count %></td>
+										<% if current_user.following?(user) %>
+											<td><%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %></td>
+										<% elsif current_user == user %>
+											<td></td>
+										<% else %>
+											<td><%= link_to 'フォローする', follow_path(user.id), method: :POST %></td>
+										<% end %>
 										<td><%= link_to "Show",user_path(user.id) %></td>
 									</tr>
 								</tbody>
