--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,7 +14,7 @@
 <div class="container">
 	<div class="row">
 		<div class= "col-xs-3">
-			<%= render"users/sidebar" ,book:@book %>
+			<%= render"users/sidebar" ,book:@book, user:current_user%>
 		</div>
 
 		<div class="col-xs-9">
