--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,7 +7,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-3">
-			<%= render "users/sidebar" ,book:@new %>
+			<%= render "users/sidebar" ,book:@new , user:@book.user%>
 		</div>
 
 		<div class="col-xs-9">
