--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-3">
-			<%= render "users/sidebar" , book:@book %>
+			<%= render "users/sidebar" , book:@book, user: current_user %>
 		</div>
 				<div class="col-xs-9">
 						<h1>Users</h1>
