--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 <div class="container">
 	<div class="row">
 		<div class="col-xs-3">
-			<%= render "users/sidebar" , book:@book %>
+			<%= render "users/sidebar" , book:@book, user:@user %>
 		</div>
 
 		<div class="col-xs-9">
