--- a/app/views/users/following.html.erb
+++ b/app/views/users/following.html.erb
@@ -11,7 +11,7 @@
 			<th></th>
 		</tr>
 	</thead>
-	<% current_user.following_user.each do |f| %>
+	<% @user.following_user.each do |f| %>
 	<tbody>
 		<tr>
 			<td>
