--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
 	<div class="row">
+		<%= render "shared/search" %>
 		<div class="col-xs-3">
 			<%= render "users/sidebar" , book:@book, user: current_user %>
 		</div>
