--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,5 +1,6 @@
 <%= form_tag(search_path, method: :get) do %>
 	<%=select_tag(:option, options_for_select([["user","1"],["book",2]])) %>
+	<%=select_tag(:choice, options_for_select([["部分一致","1"],["完全一致","2"],["前方一致","3"],["後方一致","4"]])) %>
 	<%= text_field_tag :search %>
 	<%= submit_tag '検索' %>
 <% end %>
