--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -42,7 +42,7 @@
 							</td>
 							<td><%= link_to book.title,book_path(book.id) %></td>
 							<td><%= book.body%></td>
-							<td>
+							<td id ="favorite_bottons_<%=book.id%>">
 								<%= render 'favorite', book: book %>
 							</td>
 							<td><%= book.comments.count %>件</td>
