--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -42,8 +42,10 @@
 							</td>
 							<td><%= link_to book.title,book_path(book.id) %></td>
 							<td><%= book.body%></td>
-							<td id ="favorite_bottons_<%=book.id%>">
-								<%= render 'favorite', book: book %>
+							<td>
+								<div id ="favorite_bottons_<%=book.id%>">
+									<%= render 'favorites/favorite', book: book %>
+								</div>
 							</td>
 							<td><%= book.comments.count %>件</td>
 						</tr>
