--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,20 +22,12 @@
 						</td>
 						<td><%= link_to @book.title,book_path(@book) %></td>
 						<td><%= @book.body %></td>
-						<% if current_user.already_favorited?(@book) %>
-							<td>
-								<%= link_to book_favorite_path(@book), method: :delete do %>
-									<i class="fas fa-heart"></i><%= @book.favorites.count %>
-								<% end %>
-							</td>
-						<% else %>
-							<td>
-								<%= link_to book_favorites_path(@book) ,method: :post do %>
-									<i class="far fa-heart"></i><%= @book.favorites.count %>
-								<% end %>
-						    </td>
-						    <td>コメント数: <%= @comments.count %></td>
-						<% end %>
+						<td>
+							<div id ="favorite_bottons_<%=@book.id%>">
+								<%= render 'favorites/favorite', book: @book %>
+							</div>
+						</td>
+					    <td>コメント数: <%= @comments.count %></td>
 
 					<% if @book.user == current_user %>
 						<td><%= link_to "Edit",edit_book_path(@book.id) ,class: "btn btn-success btn-sm" %></td>
