--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -12,10 +12,10 @@
 		<% if user_signed_in? %>
 
 			<div class="row">
-				<%= link_to "Log in", user_path(current_user) , class: "btn btn-info" %>
+				<%= link_to "Log in", user_path(current_user) , class: "btn btn-info col-xs-10 col-xs-offset-1" %>
 			</div>
 			<div class="row">
-				<%= link_to "Sign Up", user_path(current_user) %>
+				<%= link_to "Sign Up", user_path(current_user), class: "btn btn-success col-xs-10 col-xs-offset-1" %>
 			</div>
 		<% else %>
 			<div class="row">
