--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -35,22 +35,10 @@
 					<% end %>
 				</tr>
 			</table>
-
-				<% @comments.each do |comment| %>
-				<div>
-					<%= attachment_image_tag comment.user, :profile_image, size: "60x60",fallback:"HpGJ--S9_400x400.jpg" %>
-					<%= comment.content %>
-					<% if current_user == comment.user %>
-						<%= link_to "Delete", book_comment_path(@book,comment), method: :delete ,class: "btn btn-danger"%>
-					<% end %>
+				<div id="comments_area">
+				<%= render 'comments/index' %>
 				</div>
-				<% end %>
-
-			<%= form_for [@book, @comment] do |f| %>
-			  <%= f.text_area :content,class: "form-control" %>
-			  <br>
-			  <%= f.submit '送信' %>
-			<% end %>
+				<%= render 'comments/form' %>
 		</div>
 	</div>
 </div>
