finish comment-ajax

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -38,7 +38,7 @@
 				<div id="comments_area">
 				<%= render 'comments/index' %>
 				</div>
-				<%= render 'comments/form' %>
+				<%= render 'comments/form' ,book: @book, comment: @comment%>
 		</div>
 	</div>
 </div>
