--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with [@book, @comment] do |f| %>
+<%= form_with(model: [book, comment]) do |f| %>
 	<%= f.text_area :content,class: "form-control" %>
 	<br>
 	<%= f.submit '送信' %>
