--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <header class="navbar navbar-inverse">
       <div class="container">
         <nav class="nav navbar-nav navbar-left">
-          <span class="navbar-brand">Bookers</span>
+          <span class="navbar-brand">Trier</span>
         </nav>
         <nav>
           <ul class="nav navbar-nav navbar-right">
